syntax = "proto3";

import "scalapb/scalapb.proto";

package com.grandsys.inu.protos;

service StoredQuery {
    rpc Create(CreateQueryRequest) returns (CreateQueryReply) {}
}

message CreateQueryRequest {
    string id = 1;
    string title = 2;
    repeated string tags = 3;
}

message CreateQueryReply {
    string id = 1;
    string message = 2;
}
